# RoseACC

./: .gitignore  Makefile.am  build  configure.ac
include/: Makefile.am  openacc_spec.hpp
include/DLX/OpenACC/: Makefile.am  compiler.hpp  language.hpp
include/KLT/OpenACC/: Makefile.am  loop-tiler.hpp  mfb-acc-ocl.hpp  runtime-openacc.hpp
include/MDCG/OpenACC/: Makefile.am  model.hpp
lib/dlx/openacc/: Makefile.am  clauses.cpp  compiler.cpp  frontend.cpp  language.cpp
lib/klt/openacc/: Makefile.am  code-generation.cpp  data-flow.cpp  dlx-openacc.cpp  iteration-mapper.cpp  klt-openacc.cpp  loop-tiler.cpp  mfb-openacc.cpp  runtime-openacc.cpp
lib/mdcg/openacc/: Makefile.am  model.cpp
src/: Makefile.am  roseacc.cpp
